// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`explorer has project root info 1`] = `

<div>
  <section class="flex h-full max-h-[calc(100svh-65px-16px)] w-full grow flex-col justify-between overflow-y-auto rounded-b-lg border-[1px]">
    <div class="flex h-[50px] w-full border-b-[1px] px-8 py-4">
      <div class="flex w-full max-w-8xl items-center justify-between">
        <p class="font-mono text-xs font-light text-muted-foreground">
          :host-context(file:/path/to/project)
        </p>
      </div>
    </div>
    <section class="flex w-full items-center px-8 py-4">
      <div class="flex w-full max-w-8xl flex-row items-center gap-2">
        <gui-root-button>
        </gui-root-button>
        <gui-search-bar
          tabindex="0"
          classname="relative w-full bg-white dark:bg-muted-foreground/5"
          startcontent="[object Object]"
          endcontent="[object Object]"
        >
        </gui-search-bar>
      </div>
    </section>
    <gui-explorer-grid>
    </gui-explorer-grid>
  </section>
</div>

`;

exports[`explorer not vlt installed 1`] = `

<div>
  <gui-setup-project>
  </gui-setup-project>
</div>

`;

exports[`render default 1`] = `

<div>
</div>

`;
